remove harcode using vietnamese

--- a/erpnext/public/js/templates/crm_notes.html
+++ b/erpnext/public/js/templates/crm_notes.html
@@ -4,7 +4,7 @@
 			<svg class="icon icon-sm">
 				<use href="#icon-add"></use>
 			</svg>
-			{{ __("Thêm Ghi Chú") }}
+			{{ __("Add Note") }}
 		</button>
 	</div>
 	<div class="all-notes">
@@ -43,7 +43,7 @@
 			{% } %}
 		{% } else { %}
             <div class="no-activity text-muted pt-6">
-                {{ __("Chưa Có Ghi Chú") }}
+                {{ __("No notes") }}
             </div>
 		    {% } %}
 	</div>
