--- a/erpnext/public/scss/point-of-sale.scss
+++ b/erpnext/public/scss/point-of-sale.scss
@@ -5,9 +5,9 @@
 	padding: 1%;
 
 	section {
-		min-height: 45rem;
-		height: calc(100vh - 200px);
-		max-height: calc(100vh - 200px);
+		min-height: 30rem;
+		height: calc(100vh - 125px);
+		max-height: calc(100vh - 125px);
 	}
 
 	.frappe-control {
@@ -375,6 +375,7 @@
 					flex-direction: column;
 					flex: 1 1 0%;
 					overflow-y: scroll;
+					min-height: 50px;
 
 					> .cart-item-wrapper {
 						@extend .pointer-no-select;
@@ -775,6 +776,7 @@
 
 		.submit-order-btn {
 			@extend .primary-action;
+			margin-top: 0%;
 			background-color: var(--btn-primary);
 			color: var(--neutral);
 		}
@@ -785,117 +787,136 @@
 			margin-bottom: var(--margin-md);
 		}
 
-		> .payment-modes {
+		> .payment-split-container {
 			display: flex;
-			padding-bottom: var(--padding-sm);
-			margin-bottom: var(--margin-sm);
-			overflow-x: scroll;
-			overflow-y: hidden;
-			flex-shrink: 0;
 
-			> .payment-mode-wrapper {
-				min-width: 40%;
-				padding: var(--padding-xs);
+			> .payment-container-left {
+				width: 50%;
+				margin-bottom: var(--margin-md);
 
-				> .mode-of-payment {
-					@extend .pos-card;
-					@extend .pointer-no-select;
-					padding: var(--padding-md) var(--padding-lg);
+				.payment-modes {
+					display: flex;
+					flex-direction: column;
+					padding-right: var(--padding-sm);
+					margin-right: var(--margin-sm);
+					min-height: 15rem;
+					overflow-y: scroll;
+					height: calc(100vh - 350px);
 
-					> .pay-amount {
-						display: inline;
-						float: right;
-						font-weight: 700;
-					}
+					> .payment-mode-wrapper {
+						min-width: 40%;
+						padding: var(--padding-xs);
 
-					> .mode-of-payment-control {
-						display: none;
-						align-items: center;
-						margin-top: var(--margin-sm);
-						margin-bottom: var(--margin-xs);
-					}
-
-					> .loyalty-amount-name {
-						display: none;
-						float: right;
-						font-weight: 700;
-						white-space: nowrap;
-						overflow: hidden;
-						text-overflow: ellipsis;
-					}
-
-					> .cash-shortcuts {
-						display: none;
-						grid-template-columns: repeat(3, minmax(0, 1fr));
-						gap: var(--margin-sm);
-						font-size: var(--text-sm);
-						text-align: center;
-
-						> .shortcut {
+						> .mode-of-payment {
+							@extend .pos-card;
 							@extend .pointer-no-select;
-							border-radius: var(--border-radius-sm);
-							background-color: var(--control-bg);
-							font-weight: 500;
-							padding: var(--padding-xs) var(--padding-sm);
-							transition: all 0.15s ease-in-out;
+							padding: var(--padding-md) var(--padding-lg);
 
-							&:hover {
-								background-color: var(--control-bg);
+							> .pay-amount {
+								display: inline;
+								float: right;
+								font-weight: 700;
 							}
+
+							> .mode-of-payment-control {
+								display: none;
+								align-items: center;
+								margin-top: var(--margin-sm);
+								margin-bottom: var(--margin-xs);
+							}
+
+							> .loyalty-amount-name {
+								display: none;
+								float: right;
+								font-weight: 700;
+								white-space: nowrap;
+								overflow: hidden;
+								text-overflow: ellipsis;
+							}
+
+							> .cash-shortcuts {
+								display: none;
+								grid-template-columns: repeat(3, minmax(0, 1fr));
+								gap: var(--margin-sm);
+								font-size: var(--text-sm);
+								text-align: center;
+
+								> .shortcut {
+									@extend .pointer-no-select;
+									border-radius: var(--border-radius-sm);
+									background-color: var(--control-bg);
+									font-weight: 500;
+									padding: var(--padding-xs) var(--padding-sm);
+									transition: all 0.15s ease-in-out;
+
+									&:hover {
+										background-color: var(--control-bg);
+									}
+								}
+							}
+						}
+
+						> .loyalty-card {
+							display: flex;
+							flex-direction: column;
 						}
 					}
 				}
-
-				> .loyalty-card {
-					display: flex;
-					flex-direction: column;
-				}
 			}
-		}
 
-		> .fields-numpad-container {
-			display: flex;
-			flex: 1;
-			height: 100%;
-			position: relative;
-			justify-content: flex-end;
-
-			> .fields-section {
-				flex: 1;
+			> .payment-container-right {
 				display: flex;
 				flex-direction: column;
 				width: 50%;
-				height: 100%;
-				padding-bottom: var(--margin-md);
 
-				.invoice-fields {
-					overflow-y: scroll;
+				.fields-numpad-container {
+					display: flex;
+					flex-direction: column;
+					flex: 1;
 					height: 100%;
-					padding-right: var(--padding-sm);
-				}
-			}
+					position: relative;
+					justify-content: flex-end;
 
-			> .number-pad {
-				flex: 1;
-				display: flex;
-				justify-content: flex-end;
-				align-items: flex-end;
-				max-width: 50%;
-
-				.numpad-container {
-					display: grid;
-					grid-template-columns: repeat(3, minmax(0, 1fr));
-					gap: var(--margin-md);
-					margin-bottom: var(--margin-md);
-
-					> .numpad-btn {
-						@extend .pointer-no-select;
-						border-radius: var(--border-radius-md);
+					> .fields-section {
+						flex: 1;
 						display: flex;
-						align-items: center;
-						justify-content: center;
-						padding: var(--padding-md);
-						box-shadow: var(--shadow-sm);
+						flex-direction: column;
+						padding-left: var(--margin-md);
+
+						.invoice-fields {
+							height: 100%;
+							margin-left: auto;
+							padding: var(--padding-sm);
+						}
+					}
+
+					.number-pad {
+						position: absolute;
+						z-index: 4;
+						right: 0px;
+						flex: 1;
+						display: flex;
+						align-items: flex-end;
+
+						.numpad-container {
+							display: grid;
+							grid-template-columns: repeat(3, minmax(0, 1fr));
+							gap: var(--margin-md);
+							margin-bottom: var(--margin-md);
+							background-color: var(--fg-color);
+							border-radius: var(--border-radius-md);
+							padding: var(--padding-sm);
+
+							> .numpad-btn {
+								@extend .pointer-no-select;
+								border-radius: var(--border-radius-md);
+								display: flex;
+								align-items: center;
+								justify-content: center;
+								padding: var(--padding-md);
+								box-shadow: var(--shadow-base);
+							}
+						}
 					}
 				}
 			}
